--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 .tooltip {
   position: absolute;
   width: 135px;
-  height: 60px;
+  height: 100px;
   padding: 2px;
   padding-top: 8px;
   font: 12px sans-serif;
@@ -43,6 +43,32 @@ body {
   border-radius: 10px;
 }
 
+.d3-tip {
+  line-height: 1;
+  padding: 6px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 4px;
+  font-size: 12px;
+}
+
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+.d3-tip.n:after {
+  margin: -2px 0 0 0;
+  top: 100%;
+  left: 0;
+}
 .axis-text {
   font-family: sans-serif;
   font-weight: bold;
