--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,21 +13,20 @@ body {
   /* Padding bottom by footer height */
   padding-bottom: 80px;
 }
-
-#footer {
+#scatter::before {
   position: absolute;
-  bottom: 0;
-  width: 100%; /* Set the fixed height of the footer here */
-  height: 10px;
-  padding-top: 20px;
-  padding-bottom: 40px;
-  text-align: center;
-  background-color: #f5f5f5;
-}
-
-#footer p {
-  margin: 0;
-  font-size: 16px;
+  top: 10px;
+  left: 300px;
+  z-index: -1;
+  display: block;
+  width: 400px;
+  height: 500px;
+  content: " ";
+  background-image: url("maternity-clipart-4.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+  opacity: 0.3;
 }
 .tooltip {
   position: absolute;
